# xbridge

./: .gitignore  MANIFEST.in  Pipfile  README.md  README.rst  development.py  pyproject.toml  setup.py
.github/workflows/: cd.yml  documentation.yml  testing.yml
Testing/: test_samples.py
docs/: conf.py  converter.rst  index.rst  taxonomy_loader.rst  technical_notes.rst
tests/: other_testing.py  test_load_tax_services.py  test_old_components.py  test_parse_instances.py  test_parse_taxonomies.py  test_samples.py  test_samples_base.py  test_services.py  test_taxonomy_loader.py
xbridge/: __init__.py  __version__.py  api.py  converter.py  modules.py  taxonomy_loader.py  xml_instance.py
xbridge/Testing/: test_samples.py  test_samples_base.py  tests_xml_instance.py
xbridge/builders/: context_builder.py  dim_dom_map_builder.py  fact_builder.py  filing_indicator_builder.py  instance_builder.py  module_builder.py  scenario_builder.py  table_builder.py  taxonomy_builder.py  variable_builder.py
xbridge/docs/: api.rst  conf.py  index.rst  modules.rst  taxonomy_loader.rst  xml_instance.rst
xbridge/models/: context.py  dim_dom_map.py  fact.py  filing_indicator.py  instance.py  module.py  scenario.py  table.py  taxonomy.py  variable.py
xbridge/modules/: ae_2022-03-01.json  ae_con_cir-680-2014_2017-04-04.json  ae_con_cir-680-2014_2018-03-31.json  ae_con_its-005-2020_2021-02-28.json  ae_con_its-2013-04_2014-03-31.json  ae_con_its-2013-04_2014-07-31.json  ae_con_its-2013-04_2016-02-01.json  ae_con_its-2013-04_2016-11-15.json  ae_ind_cir-680-2014_2017-04-04.json  ae_ind_cir-680-2014_2018-03-31.json  ae_ind_its-005-2020_2021-02-28.json  ae_ind_its-2013-04_2014-03-31.json  ae_ind_its-2013-04_2014-07-31.json  ae_ind_its-2013-04_2016-02-01.json  ae_ind_its-2013-04_2016-11-15.json  ae_its-005-2020_2022-03-01.json  condis_2023-05-30.json  condis_its-2021-637_2023-05-30.json  corep_alm_2022-03-01.json  corep_alm_con_cir-680-2014_2017-04-04.json  corep_alm_con_cir-680-2014_2018-07-31.json  corep_alm_con_cir-680-2014_2019-11-15.json  corep_alm_con_its-005-2020_2020-11-15.json  corep_alm_ind_cir-680-2014_2017-04-04.json  corep_alm_ind_cir-680-2014_2018-07-31.json  corep_alm_ind_cir-680-2014_2019-11-15.json  corep_alm_ind_its-005-2020_2020-11-15.json  corep_alm_its-005-2020_2022-03-01.json  corep_frtb_2022-03-01.json  corep_frtb_con_its-005-2020_2020-11-15.json  (+307 more)
xbridge/parsers/: fact_parser.py  (+11 more)
(+16 files in other folders)
